function for working params

--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "10c908a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'hmmlearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0ae76b3debd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcluster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpoisson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mhmmlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_BaseHMM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hmmlearn'"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "from matplotlib import pyplot as plt\n",
@@ -350,11 +362,15 @@
     "\\begin{equation}\n",
     "\\alpha_t = \\alpha_{t-1}\\daleth P(x_t) \\;  for \\; t\\ge 2\n",
     "\\end{equation}\n",
-    "- **Numerical (over/under)flow:** for discrete state-dependent distributions, the elements of $\\alpha_t$, being made up of products of probabilities, become progressively smaller as $t$ increases. For the continous case, it reaches $\\inf$. The solution is the same for over and underflow: scaling the vector $\\alpha_t$ at eacht time $t$ so that its elemets sum up to 1.\n",
     "\n",
     "The elements of the vector $\\alpha_t$ are referred as **forward probabilities**.\n",
-    "\n",
     "The number of operations is of order Tm^2. But there are several numerical problems to overcome:\n",
+    "\n",
+    "- **Numerical (over/under)flow:** for discrete state-dependent distributions, the elements of $\\alpha_t$, being made up of products of probabilities, become progressively smaller as $t$ increases. For the continous case, it reaches $\\inf$. The solution is the same for over and underflow: scaling the vector $\\alpha_t$ at eacht time $t$ so that its elemets sum up to 1.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\\begin{equation}\n",
     "\\phi_t = \\alpha_t/w_t, \\; with \\; w_t = \\sum_i\\alpha_t(i)\n",
@@ -364,7 +380,8 @@
     "logL_T = \\sum_{t=1}^Tlog(w_t/w_{t-1}) = \\sum_{t=1}^Tlog(\\phi_{t-1}\\daleth P(x_t)1')\n",
     "\\end{equation}\n",
     "- **Constraints:** we can have constrains that apply to the parameters of the state-dependent distributions, and to the parameters of the Markov chain. The relevant constrains for a Poisson HMM are:\n",
-    "    - the means $\\lambda_i$ of the state-dependent distributions must be non-negative.\n",
+    "    - the means $\\lambda_i$ of the state-dependent distributions must be non-negative. This is easily solved by defining $\\eta_i = \\log\\lambda_i$\n",
+    "   \n",
     "    - The rows of the transition probability matrix $\\daleth$ must sum up to one, with all parameters $\\gamma_{ij}$ non-negative.\n"
    ]
   },
@@ -374,23 +391,100 @@
    "id": "98846603",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class Poisson_HMM(object):\n",
+    "    def __init__(self, states, n_states):\n",
+    "        self.x = states\n",
+    "        self.m = n_states\n",
+    "          \n",
+    "    def pn2pw(m,lmbda,gamma,delta=None,stationary=True):\n",
+    "        '''natural parameters to working parametes'''        \n",
+    "        # contraint for lambda\n",
+    "        tlambda = np.log(lmbda)\n",
+    "        if m == 1:\n",
+    "            return tlambda\n",
+    "        # contraint for transition probability matrix\n",
+    "        tgamma = np.log(gamma/np.diag(gamma))\n",
+    "        # discard diagonal elemets from the transformed vector\n",
+    "        tau = np.ndarray.flatten(tgamma)\n",
+    "        tau = np.delete(tau, range(0, len(tau), len(tgamma) + 1), 0)\n",
+    "        if stationary:\n",
+    "            tdelta = None\n",
+    "        else:\n",
+    "            tdelta = np.log(delta[-1]/delta[1])\n",
+    "        \n",
+    "        return tlambda,tau,tdelta\n",
+    "    \n",
+    "    def pw2pn(m,tlambda,tau,tdelta,stationary=True):\n",
+    "        ''' working to natural parameters'''\n",
+    "        lamba = np.exp(tlambda)\n",
+    "        \n",
+    "        # exponential of matrix without diagonal\n",
+    "        gamma = np.exp(tau)/(1+np.exp(np.sum(tau)))\n",
+    "        \n",
+    "    #def mle(self,x,m,lmbda_ini,delta_ini,stationary):"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba0a5e73",
+   "execution_count": 13,
+   "id": "focused-atlas",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 7,  8,  9, 10],\n",
+       "       [ 7,  8,  9, 10]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2,3,4],[4,5,6,7],[7,8,9,10],[7,8,9,10]])\n",
+    "A"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6bd78898",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_diag(x):\n",
+    "    x_no_diag = np.ndarray.flatten(x)\n",
+    "    x_no_diag = np.delete(x_no_diag, range(0, len(x_no_diag), len(x) + 1), 0)\n",
+    "    x_no_diag = x_no_diag.reshape(len(x), len(x) - 1)\n",
+    "    return x_no_diag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "living-sheriff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  4,  6,  7,  7,  8, 10,  7,  8,  9])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_diag(A)"
+   ]
   },
   {
    "cell_type": "markdown",
