--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 2,
    "id": "10c908a0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'hmmlearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-0ae76b3debd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcluster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpoisson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mhmmlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0m_BaseHMM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hmmlearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import string\n",
     "from matplotlib import pyplot as plt\n",
@@ -27,40 +15,6 @@
     "from sklearn import cluster\n",
     "from scipy.stats import poisson\n",
     "from hmmlearn.base import _BaseHMM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5a8e9f9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize(A, axis=None):\n",
-    "    \"\"\"Normalize the input array so that it sums to 1.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    A: array, shape (n_samples, n_features)\n",
-    "        Non-normalized input data.\n",
-    "    axis: int\n",
-    "        Dimension along which normalization is performed.\n",
-    "    Returns\n",
-    "    -------\n",
-    "    normalized_A: array, shape (n_samples, n_features)\n",
-    "        A with values normalized (summing to 1) along the prescribed axis\n",
-    "    WARNING: Modifies the array inplace.\n",
-    "    \"\"\"\n",
-    "    A += np.finfo(float).eps\n",
-    "    Asum = A.sum(axis)\n",
-    "    if axis and A.ndim > 1:\n",
-    "        # Make sure we don't divide by zero.\n",
-    "        Asum[Asum == 0] = 1\n",
-    "        shape = list(A.shape)\n",
-    "        shape[axis] = 1\n",
-    "        Asum.shape = shape\n",
-    "    A /= Asum\n",
-    "    # TODO: should return nothing, since the operation is inplace.\n",
-    "    return A"
    ]
   },
   {
@@ -387,48 +341,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "98846603",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def remove_diag(x):\n",
+    "    x_no_diag = np.ndarray.flatten(x)\n",
+    "    x_no_diag = np.delete(x_no_diag, range(0, len(x_no_diag), len(x) + 1), 0)\n",
+    "    x_no_diag = x_no_diag.reshape(len(x), len(x) - 1)\n",
+    "    return x_no_diag\n",
+    "def add_zero_diag(x):    \n",
+    "    d = x.shape[0]\n",
+    "    assert x.shape[1] == d - 1\n",
+    "    matrix_new = np.ndarray((d, d+1), dtype=x.dtype)\n",
+    "    matrix_new[:,0] = 0\n",
+    "    matrix_new[:-1,1:] = matrix.reshape((d-1, d))\n",
+    "    matrix_new = matrix_new.reshape(-1)[:-d].reshape(d,d)\n",
+    "    return matrix_new\n",
     "\n",
-    "class Poisson_HMM(object):\n",
-    "    def __init__(self, states, n_states):\n",
-    "        self.x = states\n",
-    "        self.m = n_states\n",
-    "          \n",
-    "    def pn2pw(m,lmbda,gamma,delta=None,stationary=True):\n",
-    "        '''natural parameters to working parametes'''        \n",
-    "        # contraint for lambda\n",
-    "        tlambda = np.log(lmbda)\n",
-    "        if m == 1:\n",
-    "            return tlambda\n",
-    "        # contraint for transition probability matrix\n",
-    "        tgamma = np.log(gamma/np.diag(gamma))\n",
-    "        # discard diagonal elemets from the transformed vector\n",
-    "        tau = np.ndarray.flatten(tgamma)\n",
-    "        tau = np.delete(tau, range(0, len(tau), len(tgamma) + 1), 0)\n",
-    "        if stationary:\n",
-    "            tdelta = None\n",
-    "        else:\n",
-    "            tdelta = np.log(delta[-1]/delta[1])\n",
+    "\n",
+    "def pn2pw(m,lmbda,gamma,delta=None,stationary=True):\n",
+    "    '''natural parameters to working parametes'''        \n",
+    "    # contraint for lambda\n",
+    "    tlambda = np.log(lmbda)\n",
+    "    if m == 1:\n",
+    "        return tlambda\n",
+    "    # contraint for transition probability matrix\n",
+    "    tgamma = np.log(gamma/np.diag(gamma))\n",
+    "    # discard diagonal elemets from the transformed vector\n",
+    "    tau = remove_diag(tgamma)\n",
+    "    if stationary:\n",
+    "        tdelta = None\n",
+    "    else:\n",
+    "        tdelta = np.log(delta[-1]/delta[1])\n",
     "        \n",
-    "        return tlambda,tau,tdelta\n",
+    "    return tlambda,tau,tdelta\n",
     "    \n",
-    "    def pw2pn(m,tlambda,tau,tdelta,stationary=True):\n",
-    "        ''' working to natural parameters'''\n",
-    "        lamba = np.exp(tlambda)\n",
+    "def pw2pn(m,tlambda,tau,tdelta,stationary=True):\n",
+    "    ''' working to natural parameters'''\n",
+    "    lmbda = np.exp(tlambda)\n",
     "        \n",
-    "        # exponential of matrix without diagonal\n",
-    "        gamma = np.exp(tau)/(1+np.exp(np.sum(tau)))\n",
-    "        \n",
-    "    #def mle(self,x,m,lmbda_ini,delta_ini,stationary):"
+    "    # operations on tau to get off-diagonal elements of gamma\n",
+    "    element_exp = np.exp(caca)\n",
+    "    sumexp =1/(np.sum(element_exp,axis=1)+1).reshape((3,1))\n",
+    "    gamma = element_exp*sumexp\n",
+    "    # add diagonal elements to gamma\n",
+    "    gamma = add_zero_diag(gamma)\n",
+    "    gamma += np.diagflat(1-np.sum(gamma,axis=1))# fill diagonal making elements sum up to 1       \n",
+    "    \n",
+    "    if stationary:\n",
+    "        delta = np.linalg.solve(np.identity(m)-gamma+np.ones((m,m)),np.ones(1,m))\n",
+    "    else:\n",
+    "        edelta = np.exp(tdelta)\n",
+    "        delta = edelta/np.sum(edelta,axis=1)\n",
+    "            \n",
+    "    return lmbda,gamma,delta\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
+   "id": "5a8e9f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.10517092 1.34985881]\n",
+      " [1.4918247  1.8221188 ]\n",
+      " [2.01375271 2.45960311]]\n",
+      "[[0.28943311]\n",
+      " [0.23180647]\n",
+      " [0.18270327]]\n",
+      "[[0.31987306 0.39069383]\n",
+      " [0.34581461 0.42237892]\n",
+      " [0.3679192  0.44937753]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "caca = np.array([[.1,  .3],\n",
+    "          [.4,  .6],\n",
+    "          [.7,  .9]])\n",
+    "element_exp = np.exp(caca)\n",
+    "sumexp =1/(np.sum(element_exp,axis=1)+1).reshape((3,1))\n",
+    "gamma = element_exp*sumexp\n",
+    "#gamma = np.exp(caca)/(1+np.exp(np.sum(caca, axis = 1)))\n",
+    "#gamma += np.diagflat(1-np.sum(gamma,axis=1))\n",
+    "#gamma\n",
+    "print(element_exp)\n",
+    "print(sumexp)\n",
+    "print(gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7a307519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.],\n",
+       "       [2., 2., 2.],\n",
+       "       [3., 3., 3.]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((3,3))*np.array([[1],[2],[3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "2de6dd28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((1,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "focused-atlas",
    "metadata": {},
    "outputs": [
@@ -441,7 +496,7 @@
        "       [ 7,  8,  9, 10]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,37 +508,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6bd78898",
+   "execution_count": 32,
+   "id": "9280691c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_diag(x):\n",
-    "    x_no_diag = np.ndarray.flatten(x)\n",
-    "    x_no_diag = np.delete(x_no_diag, range(0, len(x_no_diag), len(x) + 1), 0)\n",
-    "    x_no_diag = x_no_diag.reshape(len(x), len(x) - 1)\n",
-    "    return x_no_diag"
+    "matrix = np.array([[1,  3],\n",
+    "          [4,  6],\n",
+    "          [7,  9]])\n",
+    "caca=add_zero_diag(matrix,A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "living-sheriff",
+   "execution_count": 51,
+   "id": "6bd78898",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2,  3,  4,  4,  6,  7,  7,  8, 10,  7,  8,  9])"
+       "array([[43806544,        0,        0,        0],\n",
+       "       [       0,        0,        0,        0],\n",
+       "       [       0,        0,        0,        0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "remove_diag(A)"
+    "matrix = np.array([[1,  3],\n",
+    "          [4,  6],\n",
+    "          [7,  9]])\n",
+    "\n",
+    "d = matrix.shape[0]\n",
+    "assert matrix.shape[1] == d - 1\n",
+    "matrix_new = np.ndarray((d, d+1), dtype=matrix.dtype)\n",
+    "matrix_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "989d0864",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_new[:,0] = 0\n",
+    "matrix_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b485031a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 3, 4],\n",
+       "       [0, 6, 7, 9],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_new[:-1,1:] = matrix.reshape((d-1, d))\n",
+    "matrix_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "da8a6b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 3],\n",
+       "       [4, 0, 6],\n",
+       "       [7, 9, 0]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_new = matrix_new.reshape(-1)[:-d].reshape(d,d)\n",
+    "matrix_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "91a6e173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_new*np.identity(3)"
    ]
   },
   {
