--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -772,7 +772,21 @@
     "\n",
     "\\begin{equation}\n",
     "\\beta_t = \\daleth P(x_1)\\daleth P(x_2)...\\daleth P(x_t)1' = \\left(\\prod_{s=t+1}^T\\daleth P(x_s)\\right)1'\n",
-    "\\end{equation}\n"
+    "\\end{equation}\n",
+    "\n",
+    "The forward probabilities are joint probabilities, and the backward probabilities are conditional.\n",
+    "\n",
+    "A property of forward and backward probabilities that is applied in the EM algorithm to HMMs, follows that:\n",
+    "\n",
+    "For t = 1,2,...,T and i = 1,2,...,m,\n",
+    "\\begin{equation}\n",
+    "\\alpha_t(i)\\beta_t(i) = Pr(X^{(T)} = x^{(t)}, C_t = i),\n",
+    "\\end{equation}\n",
+    "and consequently,\n",
+    "\\begin{equation}\n",
+    "\\alpha_t\\beta'_t = Pr(X^{(T)} = x^{(t)}) = L_T,\n",
+    "\\end{equation}\n",
+    "for each such $t$.\n"
    ]
   }
  ],
