equation for lt

--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -786,7 +786,14 @@
     "\\begin{equation}\n",
     "\\alpha_t\\beta'_t = Pr(X^{(T)} = x^{(t)}) = L_T,\n",
     "\\end{equation}\n",
-    "for each such $t$.\n"
+    "for each such $t$.\n",
+    "The next conclusion that follows from the matrix expression for the likelihood and the definitions of $\\alpha_t$ and $\\beta_t$:\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "L_T &= \\left( \\delta P(x_1)\\daleth P(x_2)...\\daleth P(x_t)\\right)\\left( \\daleth P(x_{t+1})...\\daleth P(x_T)1' \\right)\n",
+    "&= \\alpha_t\\beta'_t\n",
+    "\\end{aligned}\n",
+    "\\end{equation}"
    ]
   }
  ],
