--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -575,6 +575,16 @@
    "source": [
     "# The EM algorithm \n",
     "\n",
+    "The EM algorithm is an iterative method for performing maximum likelihood estimation when some of the data are missing, and exploits the fact that the complete-data log-likelihood (CDLL) may be straightforward to maximize even if the likelihood of the observed data is not. By complete-data log-likelihood, we mean the log-likelihood of the parameters of interest $\\theta$, based on both the observed data and the missing data.\n",
+    "\n",
+    "The algorithm might be described as follows:\n",
+    "\n",
+    "Choose starting values for the parameters $\\theta$ you wish to estimate. Then repeate the following steps until some convergence criterion has been satisfied, for example, until the resulting change in $\\theta$ is less than some threshold:\n",
+    "- **E step:** compute the conditional expectations of the missing data given the observations and given the current estimate of $\\theta$. More precisely, compute the conditional expectations of those functions of the missing data that appear in the CDLL.\n",
+    "- **M step:** maximize, with respect to $\\theta$, the CDLL with the functions of the missing data replaced in it by their conditional expectations.\n",
+    "\n",
+    "The resulting value of $\\theta$ is then a stationary point of the likelihood of the observed data. In some cases, however, the stationary point reached can be a local (as opposed to global) maximum or a saddle point.\n",
+    "\n",
     "## for a Mixture model of 3 Poisson distributions"
    ]
   },
