--- a/Poisson-HMM.ipynb
+++ b/Poisson-HMM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "10c908a0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,8 @@
     "from sklearn.utils import check_random_state\n",
     "from sklearn import cluster\n",
     "from scipy.stats import poisson\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize\n",
+    "from icecream import ic"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a4d4c007",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6bb81247",
    "metadata": {},
    "outputs": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "98846603",
    "metadata": {},
    "outputs": [],
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ce63fa87",
    "metadata": {},
    "outputs": [],
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "9f96bfba",
    "metadata": {},
    "outputs": [],
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "tamil-warrior",
    "metadata": {},
    "outputs": [
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "b810d600",
    "metadata": {},
    "outputs": [],
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "70fab01a",
    "metadata": {},
    "outputs": [],
@@ -658,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "8a52b38a",
    "metadata": {},
    "outputs": [],
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "6d1b7e98",
    "metadata": {},
    "outputs": [],
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "ea8b06c7",
    "metadata": {},
    "outputs": [],
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "8384eb8a",
    "metadata": {},
    "outputs": [
@@ -748,7 +749,7 @@
        " array([12.73203817, 19.78158473, 31.62645129]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +802,85 @@
     "\\begin{align}\n",
     "L_T &= \\left( \\delta P(x_1)\\daleth P(x_2)...\\daleth P(x_t)\\right)\\left( \\daleth P(x_{t+1})...\\daleth P(x_T)1' \\right)\n",
     "&= \\alpha_t\\beta'_t\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "### Computing forward probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward(data,m,lmbda, gamma):\n",
+    "    n = len(data)\n",
+    "    lalpha = np.zeros((m,n))\n",
+    "\n",
+    "    alpha = delta[0] * poisson.pmf(k=data[0],mu=lmbda) \n",
+    "    alpha /= np.sum(alpha)\n",
+    "\n",
+    "    for i in range (1,n-1):\n",
+    "        alpha = alpha * gamma * poisson.pmf(k=data[i],mu=lmbda) \n",
+    "        alpha /= np.sum(alpha)\n",
+    "    #sumalpha0 = np.sum(alpha0)\n",
+    "    #lscale = np.log(sumalpha0)\n",
+    "    #alpha0_norm = alpha0/sumalpha0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| alpha0: array([3.64539731e-02, 2.60385522e-02, 5.62995161e-02, 6.25550179e-02,\n",
+      "                   1.08493968e-02, 5.62867481e-06, 8.62687367e-09, 2.08469437e-06,\n",
+      "                   3.54555450e-03, 8.62687367e-09, 6.10225056e-11, 3.65863863e-05,\n",
+      "                   2.01956852e-04, 8.78073270e-05, 2.01956852e-04, 3.54555450e-03,\n",
+      "                   1.46345545e-05, 4.44305075e-04, 4.44305075e-04, 2.60385522e-02,\n",
+      "                   5.62995161e-02, 5.68681981e-02, 2.60385522e-02, 8.78073270e-05,\n",
+      "                   3.54555450e-03, 6.38199809e-03, 1.86608131e-03, 9.33040657e-04,\n",
+      "                   2.01956852e-04, 1.86608131e-03, 3.64539731e-02, 5.62867481e-06,\n",
+      "                   3.64539731e-02, 2.60385522e-02, 2.01956852e-04, 3.65863863e-05,\n",
+      "                   4.44305075e-04, 2.01956852e-04, 5.62867481e-06, 4.44305075e-04,\n",
+      "                   8.78073270e-05, 3.65863863e-05, 2.08469437e-06, 6.78572508e-14,\n",
+      "                   2.76059957e-08, 2.08469437e-06, 2.19681020e-10, 5.62867481e-06,\n",
+      "                   7.44533705e-07, 6.10225056e-11, 1.11285891e-12, 4.44305075e-04,\n",
+      "                   6.38199809e-03, 2.01956852e-04, 6.38199809e-03, 1.86608131e-03,\n",
+      "                   1.73590348e-02, 7.68883571e-10, 6.25550179e-02, 1.73590348e-02,\n",
+      "                   2.01956852e-04, 3.54555450e-03, 1.73590348e-02, 9.33040657e-04,\n",
+      "                   1.73590348e-02, 2.01956852e-04, 1.86608131e-03, 1.08493968e-02,\n",
+      "                   8.55785868e-08, 2.08469437e-06, 2.56735760e-07, 8.78073270e-05,\n",
+      "                   9.33040657e-04, 1.08493968e-02, 4.44305075e-04, 4.44305075e-04,\n",
+      "                   1.46345545e-05, 1.08493968e-02, 3.54555450e-03, 1.73590348e-02,\n",
+      "                   3.54555450e-03, 2.60385522e-02, 6.25550179e-02, 1.73590348e-02,\n",
+      "                   5.62995161e-02, 1.73590348e-02, 3.15277290e-02, 5.68681981e-02,\n",
+      "                   5.62995161e-02, 4.50396129e-02, 3.54555450e-03, 1.08493968e-02,\n",
+      "                   3.64539731e-02, 4.73901650e-02, 3.64539731e-02, 9.33040657e-04,\n",
+      "                   1.73590348e-02, 1.08493968e-02, 4.73901650e-02, 3.54555450e-03,\n",
+      "                   1.73590348e-02, 1.08493968e-02, 3.64539731e-02, 1.73590348e-02,\n",
+      "                   1.08493968e-02, 5.68681981e-02, 5.68681981e-02])\n",
+      "ic| sumalpha0: 1.484940656422866\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HMM_EM_algorithm(delta,lmbda,data,iterations):\n",
+    "    prob = 0.\n",
+    "    forward(data,len(data),lmbda)\n",
+    "    #for i in range(iterations):\n",
+    "        #prob = E_step(delta,lmbda,Y)\n",
+    "        #delta,lmbda    = M_step(prob, delta,lmbda,Y)\n",
+    "        \n",
+    "\n",
+    "Y = observation_seq\n",
+    "delta = np.array([0.5,0.4,0.1])\n",
+    "lmbda = np.array([10.,20.,30.])\n",
+    "HMM_EM_algorithm(delta,lmbda, Y, 100)"
    ]
   }
  ],
